# befri

./: .gitignore  README.md  TODO.md  config.yml  design.yml  pyproject.toml  requirements.txt
languages/: english_us.yml  russian.yml
src/: __main__.py
src/core/: __init__.py  client.py  context.py  i18n.py  loader.py  logger.py
src/data/: __init__.py  config.py  design.py
src/extensions/info/: info.py
src/extensions/info/commands/: help.py
src/extensions/misc/: misc.py
src/extensions/misc/commands/: sauce.py
src/utils/: __init__.py  messages.py  null.py  paths.py
